# mytube

./: Cargo.toml  continuation.json  initialData.json  page.html  response.json  test.html  test.json  ytConfig.json
src/: adaptor.rs  constants.rs  details.rs  download.rs  innertube_request.rs  innertube_response.rs  main.rs  parse.rs  unused.rs  util.rs
