[package]
name = "mytube"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.14", features = ["blocking", "json", "gzip"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
scraper = "0.13.0"
regex = "1"
serde_json = "1.0"
reqwest_cookie_store = "0.5.0"
serde = { version = "1.0.157", features = ["derive"] }
